--- a/index.html
+++ b/index.html
@@ -472,20 +472,21 @@
         <div class="subscride">
           <p class="footer-social-title">Subscribe</p>
           <form class="footer-subscribe">
-            <label class="footer-label" for="user-email"></label>
-            <input
-              class="footer-input"
-              id="user-email"
-              type="email"
-              name="user-email"
-              placeholder="E-mail"
-            />
-            <button type="submit" class="subscride-button">
-              Subscribe
-              <svg class="subscribe-svg" width="24" height="24">
-                <use href="./images/icons.svg#icon-subscribe"></use>
-              </svg>
-            </button>
+            <label class="footer-label" for="user-email">
+              <input
+                class="footer-input"
+                id="user-email"
+                type="email"
+                name="user-email"
+                placeholder="E-mail"
+              />
+              <button type="submit" class="subscride-button">
+                Subscribe
+                <svg class="subscribe-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-subscribe"></use>
+                </svg>
+              </button>
+            </label>
           </form>
         </div>
       </div>
