check file html in validator and made correction

--- a/index.html
+++ b/index.html
@@ -480,13 +480,13 @@
                 name="user-email"
                 placeholder="E-mail"
               />
-              <button type="submit" class="subscride-button">
-                Subscribe
-                <svg class="subscribe-svg" width="24" height="24">
-                  <use href="./images/icons.svg#icon-subscribe"></use>
-                </svg>
-              </button>
             </label>
+            <button type="submit" class="subscride-button">
+              Subscribe
+              <svg class="subscribe-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
@@ -534,11 +534,11 @@
             </div>
           </div>
           <div class="modal-field">
-            <label class="modal-label" for="user-email">Email</label>
+            <label class="modal-label" for="user-email-modal">Email</label>
             <div class="modal-input-wrap">
               <input
                 class="modal-input modal-input-svg"
-                id="user-email"
+                id="user-email-modal"
                 type="email"
                 name="user-email"
               />
