--- a/index.html
+++ b/index.html
@@ -494,16 +494,12 @@
 
     <div class="backdrop">
       <div class="modal">
-        <div class="modal-close-p">
-          <button class="modal-close" type="button">
-            <svg class="modal-close-icon" width="8" height="8">
-              <use href="./images/icons.svg#icon-close"></use>
-            </svg>
-          </button>
-        </div>
-        <h3 class="modal-title">
-          Leave your contacts and we will call you back
-        </h3>
+        <button class="modal-close" type="button">
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
         <form name="contact-form">
           <div class="modal-field">
             <label class="modal-label" for="user-name">Name</label>
@@ -558,21 +554,22 @@
           </div>
           <div class="modal-checkbox">
             <input
-              id="privacy-policy"
+              id="user-policy"
               type="checkbox"
-              name="privacy-policy"
+              name="user-policy"
               value="true"
               class="visually-hidden modal-checkbox-input"
             />
-            <span class="modal-checkbox-check"
-              ><svg class="modal-checkbox-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-checkmark"></use>
-              </svg>
-            </span>
-            <label for="privacy-policy" class="modal-checkbox-label">
+
+            <label for="user-policy" class="modal-checkbox-label">
               I accept the terms and conditions of the
-              <a href="#" class="modal-link">Privacy Policy</a></label
-            >
+              <a href="#" class="modal-link">Privacy Policy</a>
+
+              <span class="modal-checkbox-check"
+                ><svg class="modal-checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-checkmark"></use>
+                </svg> </span
+            ></label>
           </div>
           <button class="button" type="submit">Send</button>
         </form>
