Made changes in the modal window, changed element checkbox and his classes in Styles.css

--- a/index.html
+++ b/index.html
@@ -554,22 +554,22 @@
           </div>
           <div class="modal-checkbox">
             <input
-              id="user-policy"
+              id="user-privacy"
               type="checkbox"
-              name="user-policy"
+              name="user-privacy"
               value="true"
               class="visually-hidden modal-checkbox-input"
             />
 
-            <label for="user-policy" class="modal-checkbox-label">
-              I accept the terms and conditions of the
-              <a href="#" class="modal-link">Privacy Policy</a>
-
+            <label for="user-privacy" class="modal-checkbox-label">
               <span class="modal-checkbox-check"
                 ><svg class="modal-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-checkmark"></use>
-                </svg> </span
-            ></label>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="#" class="modal-link">Privacy Policy</a>
+            </label>
           </div>
           <button class="button" type="submit">Send</button>
         </form>
