--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
       </div>
     </footer>
 
-    <div class="backdrop">
+    <div class="backdrop backdrop-is-open">
       <div class="modal">
         <button class="modal-close" type="button">
           <svg class="modal-close-icon" width="8" height="8">
